--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,17 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
-	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
+
 	<div class="wrapper">
 
-		<header class="header header-main">
+		<header class="header">
 			<div class="container">
 				<div class="header__inner">
 					<a href="#" class="logo">
@@ -46,29 +46,12 @@
 		</header>
 
 		<main class="main">
-			<section class="top">
-				<div class="container">
-					<h1 class="title">Leasing From D&M</h1>
-					<a href="#" class="top__link">FIND A CAR</a>
-				</div>
-			</section>
-
-			<div class="slider">
-				<div class="swiper">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide" style="background-image: url(img/slide-1.jpg);"></div>
-						<div class="swiper-slide" style="background-image: url(img/slide-2.jpg);"></div>
-						<div class="swiper-slide" style="background-image: url(img/slide-1.jpg);"></div>
-						<div class="swiper-slide" style="background-image: url(img/slide-2.jpg);"></div>
-					</div>
-					<div class="swiper-pagination"></div>
-				</div>
-				</div>
-			</div>
+			main content
 		</main>
 	
 		<footer class="footer">
 			<div class="container">
+
 				<nav class="footer__menu">
 					<ul class="footer__menu-list">
 						<li class="footer__menu-item">
@@ -160,13 +143,12 @@
 							<a href="#" class="copy__nav-link">Do Not Sell My Personal Information</a>
 						</li>
 					</ul>
-				</nav>	
+				</nav>
+	
 			</div>
 		</footer>
 
 	</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-	<script src="js/main.min.js"></script>
 </body>
 </html>
