--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -19,7 +21,7 @@
 		<header class="header header-main">
 			<div class="container">
 				<div class="header__inner">
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.svg" alt="Logo" class="logo__img">
 					</a>
 					<nav class="menu">
@@ -37,7 +39,7 @@
 								<a href="#" class="menu__list-link">LEASE VS BUY</a>
 							</li>
 							<li class="menu__list-item">
-								<a href="#" class="menu__list-link">CONTACT US</a>
+								<a href="contacts.html" class="menu__list-link">CONTACT US</a>
 							</li>
 						</ul>
 					</nav>
@@ -63,10 +65,130 @@
 					</div>
 					<div class="swiper-pagination"></div>
 				</div>
-				</div>
 			</div>
+
+			<section class="why-lease">
+				<div class="container">
+					<h2 class="section-title">Why Lease with D&M?</h2>
+					<ul class="why-lease__list">
+						<li class="why-lease__item">
+							<img src="img/why-lease_1.svg" alt="ico" class="why-lease__item-img">
+							<h3 class="why-leae__item-title">Top Dealers</h3>
+							<p class="why-lease__item-text">TrueCar Certified Dealers compete for your business by providing
+								discounted pricing on in-stock inventory.</p>
+						</li>
+						<li class="why-lease__item">
+							<img src="img/why-lease_2.svg" alt="ico" class="why-lease__item-img">
+							<h3 class="why-leae__item-title">Discounted Pricing</h3>
+							<p class="why-lease__item-text">View local inventory from the comfort of home and get access to guaranteed
+								savings on the car of your choice.</p>
+						</li>
+						<li class="why-lease__item">
+							<img src="img/why-lease_3.svg" alt="ico" class="why-lease__item-img">
+							<h3 class="why-leae__item-title">Lower Payments</h3>
+							<p class="why-lease__item-text">Get discounted pricing when you shop for a car or truck using TrueCar and
+								save on your lease payment.</p>
+						</li>
+						<li class="why-lease__item">
+							<img src="img/why-lease_4.svg" alt="ico" class="why-lease__item-img">
+							<h3 class="why-leae__item-title">Easy Upgrade</h3>
+							<p class="why-lease__item-text">Easy to upgrade to the newest vehicle model every few years if you would
+								like to be modern and comfortable</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+
+			<section class="how-does">
+				<div class="container">
+					<div class="how-does__inner">
+						<h2 class="section-title">
+							How Does Leasing Work?
+						</h2>
+						<p class="how__does0text">
+							Leasing a vehicle is essentially entering into a long term rental agreement for that vehicle. Unlike a
+							traditional car purchase, you don’t actually own the vehicle. Instead, a leasing company purchases the
+							vehicle from the dealer on your behalf and then you make monthly payments to the leasing company for the
+							duration of your lease. Some leases however, do provide the option to purchase the vehicle at the end of
+							the lease.
+						</p>
+						<h4 class="how__does-tittle">
+							Similar to a short term car rental, there are rules that define:
+						</h4>
+						<ol class="how__does-list">
+							<li class="how__does-item">
+								How much you can drive, stated as annual miles (excess miles are charged at a specified rate)
+							</li>
+							<li class="how__does-item">
+								The procedures and costs when you return the vehicle at the end of your lease
+							</li>
+							<li class="how__does-item">
+								Types of damage that you may be liable for at the end of your lease
+							</li>
+						</ol>
+						<p class="how__does-text">
+							Lease contracts are a commitment and ending them early can be difficult and expensive so it is important
+							to consider your circumstances carefully before you decide.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section class="video">
+				<div class="container">
+					<h2 class="section-title video__title">
+						WELCOME TO D&M LEASING
+					</h2>
+					<p class="video__text">
+						Find out how easy it is to lease from D&M
+					</p>
+					<iframe class="video__content" width="1000" height="500"
+						src="https://www.youtube.com/embed/OmlkEhRHRTA?controls=0" title="YouTube video player" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen></iframe>
+				</div>
+			</section>
+
+			<section class="important">
+				<div class="container">
+					<h2 class="section-title important-title">
+						Important Things to Consider
+					</h2>
+					<p class="important__text">
+						Depending on your circumstances and what is important to you, a lease could be a great option for your next
+						vehicle. Below are some important factors that may influence your decision.
+					</p>
+					<ul class="important__list">
+						<li class="important__item">
+							<img src="img/important-1.jpg" alt="picture" class="important__item-img">
+							<p class="important__item-text">
+								Monthly payments on leases are generally 20% - 30% cheaper than loans
+							</p>
+						</li>
+						<li class="important__item">
+							<img src="img/important-2.jpg" alt="picture" class="important__item-img">
+							<p class="important__item-text">
+								You may be eligible for a tax break if you use the leased vehicle for business purposes
+							</p>
+						</li>
+						<li class="important__item">
+							<img src="img/important-3.jpg" alt="picture" class="important__item-img">
+							<p class="important__item-text">
+								Easy to upgrade to the newest vehicle model every few years
+							</p>
+						</li>
+						<li class="important__item">
+							<img src="img/important-4.jpg" alt="picture" class="important__item-img">
+							<p class="important__item-text">
+								There are often fees charged if you drive more than your lease's mileage allowance
+							</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+
 		</main>
-	
+
 		<footer class="footer">
 			<div class="container">
 				<nav class="footer__menu">
@@ -122,32 +244,35 @@
 						<li class="footer__menu-item">
 							<a href="#" class="footer__menu-link">Careers</a>
 						</li>
-					</ul>				
+					</ul>
 				</nav>
-	
+
 				<ul class="app">
 					<li class="app__item">
 						<a href="#" class="app__item-link">
 							<img src="img/appstore.svg" alt="appstore" class="app__item-img">
 						</a>
-						</li>
+					</li>
 					<li class="app__item">
 						<a href="#" class="app__item-link">
 							<img src="img/googleplay.svg" alt="googleplay" class="app__item-img">
 						</a>
-						</li>
+					</li>
 				</ul>
-	
+
 				<div class="footer__copy">
 					<p class="footer__copy-text">
 						For questions about the TrueCar Auto Buying Service please call 1-888-878-3227.
-						Certified Dealers are contractually obligated by TrueCar to meet certain customer service requirements and complete the TrueCar Dealer Certification Program.
+						Certified Dealers are contractually obligated by TrueCar to meet certain customer service requirements and
+						complete the TrueCar Dealer Certification Program.
 					</p>
 					<p class="footer__copy-text">
-						TrueCar does not broker, sell, or lease motor vehicles. Unless otherwise noted, all vehicles shown on this website are offered for sale by licensed motor vehicle dealers. All vehicles are subject to prior sale. By accessing this website, you agree to the TrueCar Terms of Service and Privacy Policy.
+						TrueCar does not broker, sell, or lease motor vehicles. Unless otherwise noted, all vehicles shown on this
+						website are offered for sale by licensed motor vehicle dealers. All vehicles are subject to prior sale. By
+						accessing this website, you agree to the TrueCar Terms of Service and Privacy Policy.
 					</p>
 				</div>
-	
+
 				<nav class="copy__nav">
 					<ul class="copy__nav-list">
 						<li class="copy__nav-item">
@@ -160,7 +285,7 @@
 							<a href="#" class="copy__nav-link">Do Not Sell My Personal Information</a>
 						</li>
 					</ul>
-				</nav>	
+				</nav>
 			</div>
 		</footer>
 
@@ -169,4 +294,5 @@
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script src="js/main.min.js"></script>
 </body>
+
 </html>
