--- a/src/new-cars.html
+++ b/src/new-cars.html
@@ -19,7 +19,7 @@
 		<header class="header">
 			<div class="container">
 				<div class="header__inner">
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.svg" alt="Logo" class="logo__img">
 					</a>
 					<nav class="menu">
